// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uikit/Text should renders correctly 1`] = `
<p
  class="base general m left"
>
  Text
</p>
`;

exports[`uikit/Text should renders correctly with inject 1`] = `
<a
  class="base general m left"
/>
`;
